fix: title cut off and drag hint disappearing

--- a/style.css
+++ b/style.css
@@ -481,6 +481,10 @@ input[type="file"] {
     font-weight: 600;
     color: #a4508b;
     margin-bottom: 6px;
+    margin-top: 5px;
+    /* Tránh lẹm padding trên */
+    line-height: 1.3;
+    /* Tránh lẹm dấu chữ (như chữ 'ả', 'ể') */
     flex-shrink: 0;
     text-transform: uppercase;
     letter-spacing: 2px;
